--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section class="mb-10">
             <h2 class="text-2xl font-bold mb-3">Professional Summary</h2>
             <p class="leading-relaxed">Dynamic Senior Software Engineer with over 8+ years of experience. Proficient in
-                enhancing product functionality through robust slot management and optimizing codebases[cite: 5].
-                Demonstrated leadership through mentoring and training[cite: 6].</p>
+                enhancing product functionality through robust slot management and optimizing codebases.
+                Demonstrated leadership through mentoring and training.</p>
         </section>
 
         <section class="mb-10">
@@ -37,9 +37,16 @@
                 <p class="text-sm text-gray-500 mb-2 font-medium text-blue-600 italic">Senior Software Engineer | Aug
                     2024 - Present</p>
                 <ul class="list-disc ml-5 space-y-1">
-                    <li>Engineered test coverage increase from 18% to 41% using Jest and Cypress.</li>
-                    <li>Developed robust slot management features for product functionality[cite: 19].</li>
-                    <li>Mentored peers, leading to team-wide code coverage exceeding 50%[cite: 21].</li>
+                    <li>Developed and implemented robust slot management features, resolving complex edge cases to
+                        enhance product functionality.</li>
+                    <li>Engineered a massive increase in test coverage from 18% to 41% within one month using Jest and
+                        Cypress.</li>
+                    <li>Mentored and conducted training sessions for peers on effective unit testing, resulting in
+                        team-wide code coverage exceeding 50%.</li>
+                    <li>Optimized legacy codebases by identifying and removing redundant components, significantly
+                        improving maintainability.</li>
+                    <li>Authored comprehensive technical documentation to streamline onboarding and knowledge sharing
+                        for current and future developers.</li>
                 </ul>
             </div>
 
@@ -48,9 +55,39 @@
                 <p class="text-sm text-gray-500 mb-2 font-medium text-blue-600 italic">Senior Frontend Developer | Feb
                     2022 - Jun 2024</p>
                 <ul class="list-disc ml-5 space-y-1">
-                    <li>Architected "Priscriptum" from scratch using Nuxt3, TypeScript, and DanfoJS[cite: 29].</li>
-                    <li>Spearheaded Algorithm Trading UI using Quill and Cytoscape[cite: 25].</li>
-                    <li>Standardized state management via Pinia implementation[cite: 30].</li>
+                    <li>Spearheaded the development of an Algorithm Trading UI, overseeing technical architecture
+                        utilizing Quill and Cytoscape.</li>
+                    <li>Architected and built "Priscriptum" from scratch using Nuxt3, TypeScript, DanfoJS, and ECharts
+                        to visualize medical datasets.</li>
+                    <li>Standardized application state management by conducting POCs and implementing Pinia.</li>
+                    <li>Developed a custom authentication module in Nuxt to simplify OAuth and token management.</li>
+                    <li>Created high-efficiency data fetching tools using NuxtJS composables for optimized GraphQL
+                        queries.</li>
+                </ul>
+            </div>
+            <div class="mb-8 border-l-2 border-blue-200 pl-4">
+                <h3 class="font-bold text-xl">Accolite</h3>
+                <p class="text-sm text-gray-500 mb-2 font-medium text-blue-600 italic">Senior Software Engineer | May
+                    2021 - Feb 2022</p>
+                <ul class="list-disc ml-5 space-y-1">
+                    <li>Designed complex user interfaces using Angular and managed content structures in STRAPI.</li>
+                    <li>Integrated GraphQL for efficient data retrieval and built reusable utility libraries to minimize
+                        code duplication.</li>
+                </ul>
+            </div>
+            <div class="mb-8 border-l-2 border-blue-200 pl-4">
+                <h3 class="font-bold text-xl">Fixstream India</h3>
+                <p class="text-sm text-gray-500 mb-2 font-medium text-blue-600 italic">Member of Technical Staff | Apr
+                    2018 - May 2021</p>
+                <ul class="list-disc ml-5 space-y-1">
+                    <li>Developed interactive Network Topology visualizations using D3.js and Cytoscape.js for Data
+                        Center management.</li>
+                    <li>Engineered a drag-and-drop analytics dashboard in Vue.js to empower users with real-time network
+                        event visualization.</li>
+                    <li>Utilized Kendo UI to manage and display massive datasets with advanced sorting, filtering, and
+                        pagination.</li>
+                    <li>Improved back-end data processing performance for networking applications by developing
+                        Express.js middleware.</li>
                 </ul>
             </div>
         </section>
@@ -60,12 +97,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <h4 class="font-bold text-blue-700">Frameworks & Libraries</h4>
-                    <p class="text-sm">Vue.js (2/3), Nuxt.js, React, Angular, Pinia, D3.js, Cytoscape.js[cite: 10, 11].
+                    <p class="text-sm">Vue.js (2/3), Nuxt.js, React, Angular, Pinia, D3.js, Cytoscape.js.
                     </p>
                 </div>
                 <div>
                     <h4 class="font-bold text-blue-700">Backend & Tools</h4>
-                    <p class="text-sm">Java, GraphQL, RESTful APIs, STRAPI, Jest, AWS, CI/CD[cite: 12, 13, 14].</p>
+                    <p class="text-sm">Java, GraphQL, RESTful APIs, STRAPI, Jest, AWS, CI/CD.</p>
                 </div>
             </div>
         </section>
